@@ -1,7 +1,6 @@
 package shop.nuribooks.books.order.wrapping.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -33,7 +32,7 @@ public class WrappingPaperServiceImpl implements WrappingPaperService {
 
 		return wrappingPapers.stream()
 			.map(wp -> new WrappingPaperResponse(wp.getId(), wp.getTitle(), wp.getImageUrl(), wp.getWrappingPrice()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Override
